--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,79 @@
+:root {
+    --spacer-12: 5.5rem;
+    --spacer-11: 5rem;
+    --spacer-10: 4.5rem;
+    --spacer-9: 4rem;
+    --spacer-8: 3.5rem;
+    --spacer-7: 3rem;
+    --spacer-6: 2.5rem;
+    --spacer-5: 2rem;
+    --spacer-4: 1.5rem;
+    --spacer-3: 1rem;
+    --spacer-2: .5rem;
+    --spacer-1: .25rem;
+    --blue: hsl(211, 100%, 58%);
+    --indigo: hsl(263, 90%, 51%);
+    --purple: hsl(261, 51%, 51%);
+    --pink: hsl(332, 79%, 58%);
+    --red: hsl(354, 70%, 54%);
+    --orange: hsl(27, 98%, 54%);
+    --yellow: hsl(45, 100%, 51%);
+    --green: hsl(134, 61%, 45%);
+    --teal: hsl(162, 73%, 46%);
+    --cyan: hsl(188, 78%, 45%);
+    --white: hsl(0, 0%, 100%);
+    --gray: hsl(208, 7%, 46%);
+    --black: hsl(210, 11%, 15%);
+    --muted: hsla(0, 0%, 100%, .75);
+    --light-100: hsl(0, 0%, 98%);
+    --light-200: hsl(0, 0%, 96%);
+    --light-300: hsl(0, 0%, 94%);
+    --light-400: hsl(0, 0%, 92%);
+    --light-500: hsl(0, 0%, 90%);
+    --light-600: hsl(0, 0%, 88%);
+    --light-700: hsl(0, 0%, 86%);
+    --light-800: hsl(0, 0%, 84%);
+    --light-900: hsl(0, 0%, 82%);
+    --dark-100: hsl(0, 0%, 40%);
+    --dark-200: hsl(0, 0%, 38%);
+    --dark-300: hsl(0, 0%, 36%);
+    --dark-400: hsl(0, 0%, 34%);
+    --dark-500: hsl(0, 0%, 32%);
+    --dark-600: hsl(0, 0%, 30%);
+    --dark-700: hsl(0, 0%, 28%);
+    --dark-800: hsl(0, 0%, 26%);
+    --dark-900: hsl(0, 0%, 24%);
+    --primary: var(--blue);
+    --secondary: var(--gray);
+    --success: var(--green);
+    --info: var(--cyan);
+    --warning: var(--yellow);
+    --danger: var(--red);
+    --light: var(--light-600);
+    --dark: var(--dark-100);
+    --neutral: var(--dark-100);
+    --primary-hover: hsl(211, 100%, 50%);
+    --secondary-hover: hsl(208, 7%, 38%);
+    --success-hover: hsl(134, 61%, 37%);
+    --info-hover: hsl(188, 78%, 37%);
+    --warning-hover: hsl(45, 100%, 43%);
+    --danger-hover: hsl(354, 70%, 46%);
+    --light-hover: var(--light-800);
+    --dark-hover: var(--dark-200);
+    --neutral-hover: var(--dark-200);
+    --body-color: hsla(0, 0%, 100%, .45);
+    --headings-color: var(--white);
+    --tab-link-color: var(--white);
+    --body-bg: var(--dark-700);
+    --card-bg: var(--dark-500);
+    --table-accent-bg: var(--dark-400);
+    --fill-bg: var(--dark-300);
+    --fill-active-bg: hsl(0, 0%, 44%);
+    --progress-bg: var(--dark-100);
+    --border-radius-lg: .5rem;
+    --border-radius-sm: .25rem;
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -71,4 +147,260 @@ a.project-link:hover{
 }
 .fa-envelope{
     color: #ea4335;
+}
+
+.modal,
+.modal-open {
+    overflow: hidden
+}
+
+.modal-open .modal {
+    overflow-x: hidden;
+    overflow-y: auto
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    display: none;
+    width: 100%;
+    height: 100%;
+    outline: 0
+}
+
+.modal-dialog {
+    position: relative;
+    width: auto;
+    margin: var(--spacer-2);
+    pointer-events: none
+}
+
+.modal.fade .modal-dialog {
+    transition: transform .4s ease;
+    transform: translate(0, -50px)
+}
+
+@media (prefers-reduced-motion:reduce) {
+    .modal.fade .modal-dialog {
+        transition: none
+    }
+}
+
+.modal.show .modal-dialog {
+    transform: none
+}
+
+.modal-dialog-scrollable {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-height: calc(100% - 1rem)
+}
+
+.modal-dialog-scrollable .modal-content {
+    max-height: calc(100vh - 1rem);
+    overflow: hidden
+}
+
+.modal-dialog-scrollable .modal-footer,
+.modal-dialog-scrollable .modal-header {
+    flex-shrink: 0
+}
+
+.modal-dialog-scrollable .modal-body {
+    overflow-y: auto
+}
+
+.modal-dialog-scrollable .modal-body::-webkit-scrollbar {
+    display: none
+}
+
+.modal-dialog-centered {
+    display: flex;
+    align-items: center;
+    min-height: calc(100% - 1rem)
+}
+
+.modal-dialog-centered::before {
+    display: block;
+    height: calc(100vh - 1rem);
+    content: ""
+}
+
+.modal-dialog-centered.modal-dialog-scrollable {
+    flex-direction: column;
+    justify-content: center;
+    height: 100%
+}
+
+.modal-dialog-centered.modal-dialog-scrollable .modal-content {
+    max-height: none
+}
+
+.modal-dialog-centered.modal-dialog-scrollable::before {
+    content: none
+}
+
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: var(--card-bg);
+    background-clip: padding-box;
+    border-radius: var(--border-radius-lg);
+    outline: 0
+}
+
+.modal-body,
+.modal-footer,
+.modal-header {
+    padding: var(--spacer-5) var(--spacer-3);
+    border: none;
+}
+
+.modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.modal-header h2 {
+    font-weight: bold;
+}
+
+.modal-body {
+    position: relative;
+    flex: 1 1 auto;
+    background-color: var(--body-bg)
+}
+
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--black)
+}
+
+.modal-backdrop.fade {
+    opacity: 0
+}
+
+.modal-backdrop.show {
+    opacity: .5
+}
+
+.modal-scrollbar-measure {
+    position: absolute;
+    top: -9999px;
+    width: 50px;
+    height: 50px;
+    overflow: auto
+}
+
+@media (min-width:576px) {
+    .modal-dialog {
+        max-width: 500px;
+        margin: 1.75rem auto
+    }
+
+    .modal-dialog-scrollable {
+        max-height: calc(100% - 3.5rem)
+    }
+
+    .modal-dialog-scrollable .modal-content {
+        max-height: calc(100vh - 3.5rem)
+    }
+
+    .modal-dialog-centered {
+        min-height: calc(100% - 3.5rem)
+    }
+
+    .modal-dialog-centered::before {
+        height: calc(100vh - 3.5rem)
+    }
+
+    .modal-sm {
+        max-width: 300px
+    }
+
+    .modal-body,
+    .modal-footer,
+    .modal-header {
+        padding: var(--spacer-5)
+    }
+}
+
+@media (min-width:992px) {
+
+    .modal-lg,
+    .modal-xl {
+        max-width: 800px
+    }
+}
+
+@media (min-width:1200px) {
+    .modal-xl {
+        max-width: 1140px
+    }
+}
+
+.btn-neutral {
+    color: var(--body-color);
+    background-color: var(--neutral);
+}
+
+.btn-circle {
+    position: relative;
+    display: inline-flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
+    padding: 0;
+    border-radius: 50%;
+}
+
+.modal-content h5 {
+    font-weight: bold;
+}
+
+.modal-content ul {
+    font-weight: lighter;
+}
+
+.btn-sm.btn-circle {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+.demo-repo{
+    margin: 0 auto;
+
+}
+
+.demo-repo a{
+    color: var(--primary);
+}
+
+.demo-repo a:hover {
+    color: var(--primary-hover)
+}
+
+.demo-repo .right{
+    margin-left: 1rem;
+}
+.demo-repo .left{
+    margin-right: 1rem;
+}
+
+.project {
+    margin: 0 auto;
 }
